Created edit & delete theme funciton
