# backend/generated-server/models/gorm_theme.go
@@ -10,5 +10,6 @@ type GormTheme struct {
 	Title       string `gorm:"size:255;not null"`
 	Description string `gorm:"type:text;not null"`
 	Category    string `gorm:"size:100;not null"`
+	TimeLimitInSeconds int `gorm:"not null"`
 	CreatorID   uint   // FK to the users table
 }
